manifests/networkpolicy/nwp-egress-azdev.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nwp-egress-azdev
  namespace: azdevspace
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 10.0.0.0/24
    - to:
        - ipBlock:
            cidr: 192.168.1.0/24
